Gbu mail reminder

--- a/devsnest/Gemfile
+++ b/devsnest/Gemfile
@@ -44,5 +44,12 @@ gem 'jsonapi-resources', '~> 0.10.2'
 
 gem 'devise-jwt', '~> 0.8.0'
 gem 'whenever', require: false
+gem 'sidekiq'
+gem 'rubocop', require: false
+
+gem 'redis'
+gem 'redis-namespace'
+gem 'sidekiq-cron'
+gem 'redis-rails'
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
