--- a/devsnest/Gemfile
+++ b/devsnest/Gemfile
@@ -46,3 +46,8 @@ gem 'devise-jwt', '~> 0.8.0'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem 'sidekiq', '~> 6.1.2'
+gem 'redis', '~> 4.2.5'
+gem 'redis-namespace', '~> 1.8.0'
+gem 'sidekiq-cron', '~> 1.2.0'
+gem 'redis-rails', '~> 5.0.2'
