adding mysql host

--- a/devsnest/config/database.yml
+++ b/devsnest/config/database.yml
@@ -9,7 +9,7 @@ default: &default
   adapter: mysql2
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: devsnest
-  host: localhost
+  host: <%= ENV["MYSQL_HOST"]  { localhost } %>
   username: <%= ENV["MYSQL_USERNAME"]  %>
   password: <%= ENV["MYSQL_PASSWORD"] %>
   encoding: utf8
