changing docker compose and bugfix

--- a/devsnest/docker-compose.yml
+++ b/devsnest/docker-compose.yml
@@ -1,13 +1,16 @@
-version: "3.0.0"
+version: "3"
 services:
   "backend":
-      build: "."
-      ports:
-      - "8000:8000"
+    build: "."
+    ports:
+      - "8000:3000"
+    container_name: backend
+    env_file:
+      - '.env'
   redis:
     image: redis:alpine
     container_name: redis
     ports:
       - 6379:6379
     volumes:
-      - redis-data:/var/lib/redis
+      - /mnt/:/var/lib/redis
