--- a/devsnest/sample.env
+++ b/devsnest/sample.env
@@ -2,3 +2,6 @@ MYSQL_USERNAME=root
 MYSQL_PASSWORD=mysql
 AWS_SECRET_KEY=abcjdjjkdjkjkekjejkjke
 DEVISE_JWT_SECRET_KEY=29b5fa9e0a91b16341c777
+REDIS_DB=0
+REDIS_URL=redis://127.0.0.1
+REDIS_PORT=6379
