--- a/devsnest/docker-compose.yml
+++ b/devsnest/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   "backend":
-    build: "."
+    image: prachipathrayan/devsnestbackend
     ports:
       - "8000:3000"
     container_name: backend
