--- a/devsnest/Dockerfile
+++ b/devsnest/Dockerfile
@@ -1,12 +1,15 @@
 FROM ruby:2.7.2-alpine3.13
+RUN apk update
+RUN apk add \
+    build-base \
+    bash \
+    mariadb-dev \
+    tzdata \
+
+RUN gem install bundler
 COPY ./Gemfile  ./
 COPY ./Gemfile.lock ./
-RUN apk update
-RUN apk add bash
-RUN apk add tzdata
-RUN apk add build-base
-RUN apk add mariadb-dev
+
 RUN bundle install
 COPY ./ ./
 CMD ["bundle", "exec","puma"]
-
