--- a/devsnest/Gemfile
+++ b/devsnest/Gemfile
@@ -41,6 +41,9 @@ group :development do
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
 end
+gem "sentry-ruby"
+gem "sentry-rails"
+
 gem 'dotenv', '~> 2.7', '>= 2.7.6'
 gem 'rest-client', '~> 1.8'
 
