--- a/devsnest/Gemfile
+++ b/devsnest/Gemfile
@@ -43,6 +43,7 @@ group :development do
 end
 gem "sentry-ruby"
 gem "sentry-rails"
+gem "sentry-sidekiq"
 
 gem 'dotenv', '~> 2.7', '>= 2.7.6'
 gem 'rest-client', '~> 1.8'
